--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 flask==2.3.2
 flask-cors==3.0.10
-torch==2.0.0
-torchvision==0.15.1
+torch==2.0.0+cpu
+torchvision==0.15.1+cpu
 numpy==1.23.5
 pillow==9.5.0
 requests==2.31.0
 gunicorn
+
