--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-flask==2.3.2
-flask-cors==3.0.10
-torch==2.0.0
-torchvision==0.15.1
-numpy==1.23.5
-pillow==9.5.0
-requests==2.31.0
+flask
+flask-cors
+pillow
+numpy
+opencv-python-headless
 gunicorn
-
